# porcaro

./: README.md  porcaro.code-workspace
api/: .gitignore  README.md  instructions.md  pyproject.toml
api/notebooks/: drum_extraction_new.ipynb
api/porcaro/: extraction.py  transcription.py
api/porcaro/api/: app.py  celery.py  celery_app.py  models.py  server.py  tasks.py  utils.py
api/porcaro/api/database/: __init__.py  connection.py  models.py
api/porcaro/api/routers/: clips.py  labels.py  sessions.py
api/porcaro/api/services/: audio_service.py  database_service.py  labeled_data_service.py  memory_service.py  session_service.py
api/porcaro/cli/: start_app.py  start_celery.py
api/porcaro/models/annoteator/: dataset.py  module.py  prediction.py
api/porcaro/models/demucs/: __init__.py
api/porcaro/processing/: bpm.py  compression.py  duration.py  extraction.py  formatting.py  grid.py  matching.py  offset.py  onset.py  resampling.py  sheet.py  subdivision.py  transcriber.py  transcription.py  utils.py  visualisation.py  window.py
api/porcaro/utils/: __init__.py  bpm.py  song_data.py  time_signature.py
api/porcaro/visualisation/: track.py
api/tests/: __init__.py  conftest.py  test_clips_routes.py  test_database_service.py  test_labels_routes.py  test_root_routes.py  test_session_routes.py
client/: .gitignore  README.md  components.json  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
client/src/: App.jsx  App.tsx  main.jsx  main.tsx
client/src/components/: ClipBadges.tsx  LoadingSkeletons.tsx  ProgressCard.tsx  WaveformPlayer.tsx
client/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  skeleton.tsx  slider.tsx  sonner.tsx
client/src/hooks/: useKeyboardShortcuts.ts
client/src/lib/: api.ts
client/src/pages/: HomePage.jsx  HomePage.tsx  LabelingPage.jsx  LabelingPage.tsx  SessionPage.jsx  SessionPage.tsx
